--- a/src/main/resources/templates/sidebar/mypage.html
+++ b/src/main/resources/templates/sidebar/mypage.html
@@ -7,7 +7,7 @@
     <!--mypage-sidebar-->
     <div th:fragment="mypageSidebar" class="sidebar">
         <ul class="sidebar-menu">
-            <a href="/mypage/profile.do">마이페이지</a>
+            <a class="menu-title" href="/mypage/profile.do">마이페이지</a>
             <li><a href="">반려친구 관리</a></li>
             <li><a href="">일정 관리</a>
                 <ul>
