--- a/src/main/resources/static/css/layout-admin.css
+++ b/src/main/resources/static/css/layout-admin.css
@@ -16,7 +16,7 @@ header {
 	align-items: center;
 	justify-content: space-between;
 	width: 1024px;
-	height: 210px;
+	height: 165px;
 	margin: 0 auto; 
 }
 .logo-area {
@@ -73,7 +73,7 @@ header {
     align-items: center;     
     justify-content: center;
 	margin: 20px;
-	border: 1px solid #14b8a6;
+	border: 1px solid #14a6b8;
 	border-radius: 15px;
 	width: 250px;
 	height: 115px;
@@ -119,7 +119,7 @@ header {
     padding: 5px 0;
 }
 .user_btn {
-	background-color: #14b8a6;
+	background-color: #14a6b8;
 	font-size: 15px;
 	color: #ffffff;
 	width: 110px;
@@ -147,7 +147,7 @@ header {
 footer {
 	padding: 20px;
 	background-color: rgba(255, 255, 255, 0.7);
-	border-top: 1px solid #14b8a6;
+	border-top: 1px solid #14a6b8;
 }
 .footer-menu, .footer-info, .team-info{
 	list-style-type: none;
@@ -219,7 +219,7 @@ footer {
     background-color: #Dff5f3;
     padding: 15px;
     width: 150px; 
-    border-right: 1px solid #c1ece7;
+    border-right: 1px solid #c1e7ec;
 	border-radius: 7px;
 }
 
@@ -244,7 +244,7 @@ footer {
 }
 
 .sidebar-menu a:hover, .contact-us a:hover {
-    background-color: #c1ece7;
+    background-color: #c1e7ec;
 }
 
 .sidebar-menu li > ul {
@@ -264,7 +264,7 @@ footer {
 	font-weight: 800;
 }
 .contact-us {
-	border-top: 1px solid #c1ece7;
+	border-top: 1px solid #c1e7ec;
     margin-top: 15px;
     padding-top: 10px;
 }
