--- a/src/main/resources/templates/layout/adminLayout.html
+++ b/src/main/resources/templates/layout/adminLayout.html
@@ -6,8 +6,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, maximum-scale=1.0, minimum-scale=1, user-scalable=yes,initial-scale=1.0" />
     <title layout:title-pattern="$LAYOUT_TITLE - $CONTENT_TITLE">애니플랜트</title>
-    <link rel="stylesheet" th:href="@{/css/layout.css}"/>
-    <link rel="stylesheet" th:href="@{/css/nav.css}"/>
+    <link rel="stylesheet" th:href="@{/css/layout-admin.css}"/>
+    <link rel="stylesheet" th:href="@{/css/nav-admin.css}"/>
     <script th:src="@{/js/layout.js}"></script>
     <!-- content style -->
     <th:block layout:fragment="css"></th:block>
@@ -17,11 +17,11 @@
 </head>
 <body>
     <!-- navAdminFragment 사용 -->
-    <th:block th:replace="fragments/nav :: navAdminFragment"></th:block>
+    <th:block th:replace="fragments/nav-admin :: navAdminFragment"></th:block>
     <!-- header fragment 사용 -->
-    <th:block th:replace="fragments/header :: headerFragment"></th:block>
+    <th:block th:replace="fragments/header-admin :: headerFragment"></th:block>
     <!-- nav fragment 사용 -->
-    <th:block th:replace="fragments/nav :: navFragment"></th:block>
+    <th:block th:replace="fragments/nav-admin :: navFragment"></th:block>
     <!-- content fragment 사용 -->
     <th:block layout:fragment="content"></th:block>
     <!-- footer fragment 사용 -->
