--- a/src/main/resources/templates/sidebar/mypage.html
+++ b/src/main/resources/templates/sidebar/mypage.html
@@ -9,7 +9,7 @@
         <ul class="sidebar-menu">
             <a class="menu-title" href="/mypage/profile.do">마이페이지</a>
             <li><a href="">반려친구 관리</a></li>
-            <li><a href="">일정 관리</a>
+            <li><a href="">일정 관리</a></li>
                 <ul>
                     <li><a href="#!">일정 관리</a></li>
                     <li><a href="#!">일정 카테고리 관리</a></li>
