--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -19,7 +19,7 @@
 		<div class="nav-privacy-admin-area" th:if="${#authorization.expression('hasRole(''ROLE_PRIVACY_ADMIN'')')}">
 			<nav class="nav-privacy-admin">
 				<ul>
-					<li>회원 관리</li>
+					<li><a href="/privacy-admin/user-management/main.do">회원 관리</a></li>
 					<li>반려친구 관리</li>
 					<li>일정 관리</li>
 				</ul>
