--- a/src/main/resources/templates/privacy-admin/user-management/user-list.html
+++ b/src/main/resources/templates/privacy-admin/user-management/user-list.html
@@ -14,7 +14,9 @@
     </th:block>
 
     <!-- 해당 페이지 고유 스크립트 추가 -->
-    <th:block layout:fragment="script"></th:block>
+    <th:block layout:fragment="script">
+        <script th:src="@{/js/user-management.js}"></script>
+    </th:block>
 </head>
 
 <body>
@@ -29,14 +31,14 @@
                 <caption>회원 전체 리스트</caption>
                 <thead>
                     <tr>
-                        <th>회원 번호</th>
-                        <th>아이디</th>
-                        <th>이름</th>
-                        <th>닉네임</th>
-                        <th>회원 등급</th>
-                        <th>생년월일</th>
-                        <th>성별</th>
-                        <th>탈퇴 여부</th>
+                        <th>회원 번호 <button type="button" class="sort_btn"></button></th>
+                        <th>아이디 <button type="button" class="sort_btn"></button></th>
+                        <th>이름 <button type="button" class="sort_btn"></button></th>
+                        <th>닉네임 <button type="button" class="sort_btn"></button></th>
+                        <th>회원 등급 <button type="button" class="sort_btn"></button></th>
+                        <th>생년월일 <button type="button" class="sort_btn"></button></th>
+                        <th>성별 <button type="button" class="sort_btn"></button></th>
+                        <th>탈퇴 여부 <button type="button" class="sort_btn"></button></th>
                     </tr>
                 </thead>
                 <tbody>
@@ -47,7 +49,7 @@
                         <td th:text="${user.nickname}"></td>
                         <td th:text="${user.rank}"></td>
                         <td th:text="${#dates.format(user.birth, 'yyyy-MM-dd')}"></td>
-                        <td th:text="${user.gender}"></td>
+                        <td th:text="${user.gender == 'M' ? '남성' : '여성'}"></td>
                         <td th:text="${user.is_deleted}"></td>
                     </tr>
                 </tbody>
