--- a/src/main/resources/static/css/user-management.css
+++ b/src/main/resources/static/css/user-management.css
@@ -76,3 +76,9 @@ tbody tr:nth-child(even):hover td {
 .sort_btn_down {
   background-image: url("/img/btn-sort-down.png");
 }
+.table-top-wrapper {
+  display: flex;
+  flex-direction: row;
+  padding: 0;
+  margin: 0;
+}
