--- a/src/main/resources/templates/mypage/pet-join.html
+++ b/src/main/resources/templates/mypage/pet-join.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>애니플랜트 : 로그인</title>
+  <title>애니플랜트 : 반려친구 등록</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <style>
     .logo_aniplant .link {
@@ -29,17 +29,44 @@
   </style>
 </head>
 <body>
-  <h1 class="logo_aniplant">
-    <a href="/index.do" class="link"></a>
-    <span class="blind">애니플랜트</span>
-  </h1>
-  <div class="content">
-    <form>
-        <input type="text" id="loginID" name="username" placeholder="아이디"><span id="idError" class="error"></span><br>
-        <input type="password" id="loginPWD" name="password" placeholder="비밀번호"><span id="pwdError" class="error"></span><br>
-        <button type="button" id="login_btn" class="btn_submit">로그인</button><span id="loginError" class="error"></span><br>
-    </form>
-    <div><a href="/user/join.do">회원가입</a></div>
-</div>
+    <h1 class="logo_aniplant">
+        <a href="/index.do" class="link"></a>
+        <span class="blind">애니플랜트</span>
+    </h1>
+    <div class="content">
+        <form id="join_form" name="join_form" method="post" action="/api/register-pet" enctype="application/json">
+        <input type="text" id="nameInput" name="name" placeholder="이름을 입력해 주세요"><br>
+        <input type="date" id="birthInput" name="birthInput" placeholder="생일을 입력해 주세요"><br>
+        <input type="date" id="adopted_atInput" name="adopted_at" placeholder="입양일"><br>       
+        <button type="button" id="join_btn" class="btn_submit">등록</button>
+        </form>
+    </div>
 </body>
+<script>
+    $(document).ready(function() {
+        $('#join_btn').on('click', function(event) {
+            event.preventDefault();
+            
+            const petData = {
+                name: $('#nameInput').val(),
+                birth: $('#birthInput').val(),
+                adopted_at: $('#adopted_atInput').val()
+            };
+
+            $.ajax({
+                url: '/api/register-pet',
+                contentType: 'application/json',
+                data: JSON.stringify(petData),
+                type: 'POST',
+                success: function () {
+                    alert('등록이 완료되었습니다.');
+                    location.href = '/index.do';
+                },
+                error: function () {
+                    alert('등록에 실패하였습니다.');
+                }
+            });
+        });
+    });
+</script>
 </html>
