--- a/src/main/resources/templates/board/articleForm.html
+++ b/src/main/resources/templates/board/articleForm.html
@@ -41,9 +41,9 @@ layout:decorate="~{layout/defaultLayout}"><!--푸터, 헤더 적용-->
         	  <tr>
         		    <td align="left">카테고리</td>
                     <td colspan="2" >
-                      <select id="topLevelSelect" name="categoryName">
-                        <option value="animals">동물게시판</option>
-                        <option value="plants">식물게시판</option>
+                      <select id="topLevelSelect" name="categoryNum">
+                        <option  th:value="127">동물게시판</option>
+                        <option th:value="128">식물게시판</option>
                       </select>
                       
                 </td>
