--- a/src/main/resources/static/css/layout-admin.css
+++ b/src/main/resources/static/css/layout-admin.css
@@ -216,9 +216,9 @@ footer {
 
 /* sidebar start-point */
 .sidebar {
-    background-color: #Dff5f3;
+    background-color: #Dff3f5;
     padding: 15px;
-    width: 124px; 
+    width: 1px; 
     border-right: 1px solid #c1e7ec;
 	border-radius: 7px;
 }
@@ -270,3 +270,56 @@ footer {
 }
 
 /* sidebar end-point */
+.sidebar {
+    background-color: #Dff5f3;
+    padding: 15px;
+    width: 150px; 
+    border-right: 1px solid #c1e7ec;
+	border-radius: 7px;
+}
+
+.sidebar-menu, .sidebar-menu ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.sidebar-menu > li {
+    margin-bottom: 10px;
+}
+
+.sidebar-menu a, .contact-us a {
+    text-decoration: none;
+	font-size: 14px;
+    color: #333;
+    padding: 8px 12px;
+    display: block;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+.sidebar-menu a:hover, .contact-us a:hover {
+    background-color: #c1e7ec;
+}
+
+.sidebar-menu li > ul {
+    display: none;
+    margin-left: 10px;
+}
+
+.sidebar-menu li:hover > ul {
+    display: block; 
+}
+
+.sidebar-menu li > ul > li > a {
+    font-size: 0.9em; 
+    padding-left: 20px; 
+}
+.menu-title {
+	font-weight: 800;
+}
+.contact-us {
+	border-top: 1px solid #c1e7ec;
+    margin-top: 15px;
+    padding-top: 10px;
+}
