--- a/src/main/resources/static/css/user-management.css
+++ b/src/main/resources/static/css/user-management.css
@@ -18,6 +18,9 @@ table {
 
 td {
   padding: 6px 15px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 th {
@@ -45,7 +48,7 @@ td:first-child {
   border-left: 1px solid #c6c9cc;
 }
 
-tr:nth-child(even) td {
+tr:not(.detail-content-row):nth-child(even) td {
   background: #dff3f5;
 }
 
@@ -57,12 +60,16 @@ tr:last-child td:last-child {
   border-bottom-right-radius: 6px;
 }
 
-tbody tr:hover {
+tbody tr:not(.detail-content-row):hover {
   background-color: rgba(20, 166, 184, 0.2);
 }
 
-tbody tr:nth-child(even):hover td {
+tbody tr:not(.detail-content-row):nth-child(even):hover td {
   background-color: rgba(20, 166, 184, 0.2);
+}
+
+tbody tr.detail-content-row:hover td {
+  background-color: #fff !important;
 }
 
 /* Button Styles */
@@ -176,4 +183,149 @@ tbody tr:nth-child(even):hover td {
   width: 30px;
   margin: 0 2px;
   text-align: center;
+}
+
+/* User Detail */
+#detail-rank-img {
+  width: 25px;
+  height: 25px;
+  margin-right: 5px;
+  vertical-align: middle;
+}
+
+#detail-profile-img {
+  width: 120px;
+  height: 120px;
+  margin-right: 15px;
+}
+
+.detail-content {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto auto auto auto;
+  gap: 20px;
+  margin: 10px;
+  padding: 15px;
+  font-size: 16px;
+  border: 1px solid #14a6b8;
+  border-radius: 6px;
+}
+
+.detail-content h2 {
+  grid-column: 1 / 3;
+  text-align: center;
+  margin-bottom: 10px;
+  padding-bottom: 10px;
+  color: #333;
+  font-size: 24px;
+  border-bottom: 1px solid #14a6b8;
+}
+
+.basic-info-area, 
+.contact-info-area, 
+.account-info-area, 
+.deletion-info-area {
+  padding: 13px;
+  border: 1px solid #d7f0f3;
+  border-radius: 5px;
+  background-color: #dff3f5;
+}
+
+.basic-info-area {
+  grid-column: 1;
+  grid-row: 2;
+  display: flex;
+  align-items: center;
+}
+
+.contact-info-area {
+  grid-column: 2;
+  grid-row: 2;
+}
+
+.account-info-area {
+  grid-column: 1;
+  grid-row: 3;
+}
+
+.deletion-info-area {
+  grid-column: 2;
+  grid-row: 3;
+}
+
+.button-area {
+  grid-column: 2;
+  grid-row: 4;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.detail-content ul, li {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.detail-content li:first-child {
+  margin-top: 8px;
+}
+
+.detail-content li {
+  margin-bottom: 8px;
+  font-size: 16px;
+}
+
+.detail-content strong {
+  font-weight: 600;
+  color: #43b8c6;
+}
+
+.button-area button {
+    background-color: #14a6b8;
+    font-size: 15px;
+    color: #ffffff;
+    width: 80px;
+    height: 30px;
+    padding: 6px;
+    margin: 5px 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.button-area button:hover {
+    background-color: #0f8a90;
+}
+
+/* 탈퇴한 사용자에 대한 스타일 */
+.deleted-user,
+.deleted-user h2,
+.deleted-user li,
+.deleted-user strong {
+    color: #c64351 !important; 
+}
+
+.deleted-user {
+    border: 1px solid #b81426 !important; 
+}
+
+.deleted-user h2 {
+    border-bottom: 1px solid #b81426 !important; 
+}
+
+.deleted-user .basic-info-area,
+.deleted-user .contact-info-area,
+.deleted-user .account-info-area,
+.deleted-user .deletion-info-area {
+    background-color: #ffe6e6 !important;
+    border-color: #f3d7da !important;
+}
+
+.deleted-user .button-area button {
+    background-color: #b81426 !important;
+}
+
+.deleted-user .button-area button:hover {
+    background-color: #93101e !important;
 }
