--- a/src/main/resources/templates/privacy-admin/user-management/user-detail.html
+++ b/src/main/resources/templates/privacy-admin/user-management/user-detail.html
@@ -5,13 +5,13 @@
     <link rel="stylesheet" th:href="@{/css/user-management.css}">
 </head>
 <body>
-      <div class="detail-content" th:classappend="${user.is_deleted} ? 'deleted-user' : ''">
+    <div class="detail-content" th:classappend="${user.is_deleted} ? 'deleted-user' : (${user.is_suspended} ? 'suspended-user' : '')">
         <h2 th:text="${user.name + '님의 회원 정보'}">User Information</h2>
         <div class="basic-info-area">
-            <div><img id="detail-profile-img" src="/img/profile-default-m.png"></div>
+            <div><img id="detail-profile-img" th:src="@{'/img/' + ${user.profile_picture}}"></div>
             <div>
-                <li><strong>회원 번호 : </strong> <span th:text="${user.user_num}"></span></li>
-                <li><strong>회원 등급 : </strong> <img id="detail-rank-img" th:src="${user.rank.imagePath}"><span th:text="${user.rank.displayName}"></span></li>
+                <li><strong>회원 번호 : </strong> <span id="userData" th:text="${user.user_num}"></span></li>
+                <li><strong>회원 등급 : </strong> <img class="detail-rank-img" th:src="${user.rank.imagePath}"><span th:text="${user.rank.displayName}"></span></li>
                 <li><strong>닉네임 : </strong> <span th:text="${user.nickname}"></span></li>
             </div>
         </div>
@@ -19,6 +19,7 @@
             <ul>
                 <li><strong>아이디 : </strong> <span th:text="${user.id}"></span></li>
                 <li><strong>이름 : </strong> <span th:text="${user.name}"></span></li>
+                <li><strong>성별 : </strong> <span th:text="${user.gender == 'M' ? '남성' : '여성'}"></span></li>
                 <li><strong>생년월일 : </strong> <span th:text="${#dates.format(user.birth, 'yyyy-MM-dd')}"></span></li>
                 <li><strong>이메일 : </strong> <span th:text="${user.email}"></span></li>
                 <li><strong>전화번호 : </strong> <span th:text="${user.country_code + '-' + user.first_hp + '-' + user.second_hp}"></span></li>
@@ -28,24 +29,27 @@
             <ul>
                 <li><strong>회원가입일 : </strong> <span th:text="${#dates.format(user.created_at, 'yyyy-MM-dd HH:mm:ss')}"></span></li>
                 <li><strong>현재 로그인 실패 횟수 : </strong> <span th:text="${user.fail_count}"></span></li>
-                <li><strong>회원 정보 수정자 : </strong> <span th:text="${user.updated_user_num}"></span></li>
+                <li><strong>회원 정보 수정자 : </strong> <span th:utext="${updatedUserDisplay}"></span></li>
                 <li><strong>회원 정보 수정일 : </strong> <span th:text="${#dates.format(user.updated_at, 'yyyy-MM-dd HH:mm:ss')}"></span></li>
-                <li><strong>회원 정지 여부 : </strong> <span></span></li>
             </ul>
         </div>
         <div class="deletion-info-area">
             <ul>
+                <li><strong>회원 정지 여부 : </strong> <span th:text="${user.is_suspended}"></span></li>
                 <li><strong>회원 탈퇴 여부 : </strong> <span th:text="${user.is_deleted}"></span></li>
-                <li><strong>회원 탈퇴 처리자 : </strong> <span th:text="${user.deleted_user_num}"></span></li>
+                <li><strong>회원 탈퇴 처리자 : </strong> <span th:utext="${deletedUserDisplay}"></span></li>
                 <li><strong>회원 탈퇴일 : </strong> <span th:text="${#dates.format(user.deleted_at, 'yyyy-MM-dd HH:mm:ss')}"></span></li>
                 <li><strong>회원 탈퇴 이유 : </strong> <span th:text="${user.deleted_reason}"></span></li>
             </ul>
         </div>
         <div class="button-area">
-            <button th:if="${!user.is_deleted}">수정</button>
-            <button th:if="${!user.is_deleted}">정지</button>
-            <button>삭제</button>
+            <button id="update_btn" th:if="${!user.is_deleted}">수정</button>
+            <button id="suspend_btn" th:if="${!user.is_deleted}">정지</button>
+            <button id="delete_btn">삭제</button>
         </div>
     </div>
 </body>
+<script>
+
+</script>
 </html>
